--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -13,4 +13,7 @@
     <string name="toolbar_title_createaccount">Create Account</string>
     <string name="firstword_card">Hace</string>
     <string name="likenumbercard_card">10 Me Gusta</string>
+    <string name="tab_search">Search</string>
+    <string name="tab_home">Home</string>
+    <string name="tab_profile">My</string>
 </resources>
